# iggy

./: Cargo.toml  DEPENDENCIES.md
core/connectors/sinks/postgres_sink/: Cargo.toml  README.md
core/connectors/sinks/postgres_sink/src/: lib.rs
core/connectors/sources/postgres_source/: Cargo.toml  README.md
core/connectors/sources/postgres_source/src/: lib.rs
foreign/cpp/ffi/: Cargo.toml
foreign/cpp/ffi/src/: lib.rs
foreign/cpp/sdk/: client.cc  client.h  ffi.h
