[package]
name = "iggy-cpp-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iggy = { path = "../../../core/sdk", version = "0.7.0" }
bytes = "1.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
spinning_top = "0.3"

[features]
default = [] 